--- a/rpiconfig.yaml
+++ b/rpiconfig.yaml
@@ -15,6 +15,10 @@
 --- 
 #camImgConfig:
   image_dir: './webcam'
+  image_id: 'CAM1'
+  image_rot: 90
+  use_ir: 0
+  bcm_irport: 19
   dark_hours: [17, 8] 
   dark_mins: [0, 0]
   dark_loc: ['57.0774992' , '9.9117876']
