--- a/rpiconfig.yaml
+++ b/rpiconfig.yaml
@@ -1,17 +1,18 @@
 # YAML
 ---
 #timerConfig:
-  start_year: 2016
-  stop_year: 2016
+  start_year: 2017
+  stop_year: 2017
   start_month: 1
-  stop_month: 2
+  stop_month: 12
   start_day: 1
-  stop_day: 29
+  stop_day: 31
   start_hour: [0]
   start_min: [1]
   stop_hour: [23] 
   stop_min: [55] 
   interval_sec: [150, 30]
+  token_file: 'tspk_keys.txt'
 --- 
 #camImgConfig:
   image_dir: './webcam'
@@ -31,3 +32,4 @@
 #dbImgConfig:
   image_snap: 'cam.jpg'
   interval_sec: [305.3]
+  token_file: 'token_key.txt'
