Add camera control params

--- a/rpiconfig.yaml
+++ b/rpiconfig.yaml
@@ -1,39 +1,65 @@
 # RPICAM Configurations 
 #timerConfig:
-  start_date: '2025-01-01'
-  stop_date:  '2025-12-31'
-  start_times: ['00:00:00', '08:00:00', '16:00:00']
-  stop_times:  ['07:59:00', '15:59:00', '23:59:00']
-  start_dark_time: 2
-  stop_dark_time: 0
-  interval_sec: [15, 30, 15]
+start_date: '2025-01-01'
+stop_date:  '2025-12-31'
+start_times: ['00:00:00', '08:00:00', '16:00:00']
+stop_times:  ['07:59:00', '15:59:00', '23:59:00']
+start_dark_time: 2
+stop_dark_time: 0
+interval_sec: [15, 30, 15]
 ---
 #camConfig:
-  cam_id: 'CAM1'
-  cam_type: 'V1'
-  cam_sensor: 'daylight'
-  rec_type: 'still'
-  image_dir: './webcam'
-  image_rot: 180
-  image_res: [1024, 768]
-  jpg_qual: 85
-  use_ovltxt: yes
-  use_irl: yes
-  bcm_irlport: 19
-  use_pir: no
-  bcm_pirport: 16
-  pirtd_sec: 15
-  lat_lon: ['57:04:39.4', '09:54:42.6']
+cam_id: 'CAM1'
+cam_type: 'V1'
+cam_sensor: 'daylight'
+rec_type: 'still'
+image_dir: './webcam'
+image_rot: 180
+image_res: [1024, 768]
+jpg_qual: 85
+use_ovltxt: yes
+use_irl: yes
+bcm_irlport: 19
+use_pir: no
+bcm_pirport: 16
+pirtd_sec: 15
+lat_lon: ['57:04:39.4', '09:54:42.6']
+# Camera controls. See Apendix C in Picamera2 API documentation. 
+cam_expday:
+  AwbEnable: True  # Turn AWB algorithm on and off
+  AwbMode:  'Auto' # controls.AwbModeEnum.Auto, Tungsten, Fluorescent, Incandescent, Indoor, Daylight, Cloudy
+  AeEnable: True   # Turn AEC/AGC algorithm on and off
+  AeExposureMode: 'Normal' # controls.AeExposureModeEnum.Normal, Short, Long
+  ExposureValue: 0 # EV compensation value. Floating point number between -8.0 and 8.0
+  Contrast: 1.0    # Floating point number from 0.0, 1.0 to 32.0
+  Brightness: 0.0  # Floating point number from -1.0 to 1.0
+cam_expnight-irl:
+  AwbEnable: True  # Turn AWB algorithm on and off
+  AwbMode:  'Auto' # controls.AwbModeEnum.Auto, Tungsten, Fluorescent, Incandescent, Indoor, Daylight, Cloudy
+  AeEnable: True   # Turn AEC/AGC algorithm on and off
+  AeExposureMode: 'Normal' # controls.AeExposureModeEnum.Normal, Short, Long
+  ExposureValue: 1 # EV compensation value. Floating point number between -8.0 and 8.0
+  Contrast:  5.0   # Floating point number from 0.0, 1.0 to 32.0
+  Brightness: 0.0  # Floating point number from -1.0 to 1.0
+cam_expnight:
+  AwbEnable: True  # Turn AWB algorithm on and off
+  AwbMode:  'Auto' # controls.AwbModeEnum.Auto, Tungsten, Fluorescent, Incandescent, Indoor, Daylight, Cloudy
+  AeEnable: False  # Turn AEC/AGC algorithm on and off
+  AeExposureMode: 'Normal' # controls.AeExposureModeEnum.Normal, Short, Long
+  ExposureValue: 0 # EV compensation value. Floating point number between -8.0 and 8.0
+  ExposureTime: 500000 # Exposure time for the sensor to use, measured in microseconds
+  Contrast: 3.0    # Floating point number from 0.0, 1.0 to 32.0
+  Brightness: 0.0  # Floating point number from -1.0 to 1.0
 ---
 #dirConfig:
-  list_size: 10
-  interval_sec: [15.3, 30.3, 15.3]
+list_size: 10
+interval_sec: [15.3, 30.3, 15.3]
 ---
 #dbConfig:
-  image_snap: 'cam.jpg'
-  interval_sec: [31.3, 61.3, 31.3]
-  token_file: 'tokens.pkl'
+image_snap: 'cam.jpg'
+interval_sec: [31.3, 61.3, 31.3]
+token_file: 'tokens.pkl'
 ---
 #rcConfig:
-  interval_sec: [150, 30]
-  token_file: ''
+interval_sec: [150, 30]
+token_file: ''
