Use yaml/json configured exp

--- a/rpiconfig.yaml
+++ b/rpiconfig.yaml
@@ -89,8 +89,8 @@ cam_expnight-irl:
   AwbEnable: True  # Turn AWB algorithm on and off
   AwbMode:  'Auto' # controls.AwbModeEnum.Auto, Tungsten, Fluorescent, Incandescent, Indoor, Daylight, Cloudy
   AeEnable: True   # Turn AEC/AGC algorithm on and off
-  AeExposureMode: 'Normal' # controls.AeExposureModeEnum.Normal, Short, Long
-  ExposureValue: 4.0 # EV compensation value. Floating point number between -8.0 and 8.0
+  AeExposureMode: 'Long' # controls.AeExposureModeEnum.Normal, Short, Long
+  ExposureValue: 16.0 # EV compensation value. Floating point number between -8.0 and 8.0
   Contrast:  4.0   # Floating point number from 0.0, 1.0 to 32.0
   Brightness: 0.5  # Floating point number from -1.0 to 1.0
 cam_expnight:
